fix: Remove fade/lighten/contrast methods from scss files

--- a/src/tile.scss
+++ b/src/tile.scss
@@ -4,6 +4,9 @@
 
 $block: #{$fd-namespace}-tile;
 
+// BASE
+$fd-tile-interactive-border: 0.0625rem solid var(--sapTile_Interactive_BorderColor);
+
 // SIZES
 $fd-tile-height: 11rem !default;
 $fd-tile-width: 11rem !default;
@@ -150,12 +153,12 @@ $fd-line-tile-badge-horizontal-spacing: 0.375rem !default;
   // STATES
   @include fd-active() {
     background: var(--sapTile_Active_Background);
-    // box-shadow: 0 0 0 1px fade(var(--sapContent_ShadowColor), 30);
+    border: $fd-tile-interactive-border;
   }
 
   @include fd-hover() {
     background: var(--sapTile_Hover_Background);
-    // box-shadow: 0 0 0 1px fade(var(--sapContent_ShadowColor), 30);
+    border: $fd-tile-interactive-border;
 
     .#{$block}__toggle {
       display: block;
